# pyOFTools

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  advanced_usage.html  api_reference.html  changelog.html  conftest.py  core_concepts.html  faq_and_troubleshooting.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  references_and_links.html  search.html  searchindex.js  sitemap.xml  testing_and_development.html
.github/workflows/: ci.yaml  docs-preview.yaml  pages.yaml  publish.yml
_modules/: index.html
_modules/pyOFTools/: geometry.html  interpolation.html
_sources/: quickstart.rst.txt
cmake/: Dependencies.cmake
docs/: api_reference.rst  conf.py  core_concepts.rst  index.rst  installation.rst  introduction.rst  quickstart.rst
example/: surface_example.py
example/damBreak/: Allrun  plotResults.py  postProcess.py
example/damBreak/system/: setFields.json  setFields.py
src/embeddingPython/: CMakeLists.txt  pyFunctionObject.cpp  pyFunctionObject.hpp  pyPostProcessing.cpp  pyPostProcessing.hpp
src/pyOFTools/: __init__.py  aggregators.py  binning.py  builders.py  cli.py  datasets.py  dict.py  fieldFunctions.py  geoFields.py  geometry.py  interpolation.py  node.py  patch_pybfoam.py  postProcess.py  postprocessor.py  region_system.py  residuals.py  set_interpolation.py  sets.py  spatial_selectors.py  surfaces.py  time_series.py  workflow.py  writer.py
src/pyOFTools/aggregation/: CMakeLists.txt  aggregation.cpp  bind_aggregation.cpp  bind_aggregation.hpp
src/pyOFTools/cli/: cli.py
src/pyOFTools/tables/: csvWriter.py  table.py
tests/: conftest.py  test_aggregators.py  test_apply_spatial_selectors.py  test_binning.py  test_datasets.py  test_region_system.py  test_spatial_selectors.py  test_workflow.py  test_writer.py
tests/cavity/: icoFoam.py
tests/integration/: conftest.py  test_builders_basic.py  test_interpolation.py  test_parallel.py  test_pipeline_integration.py  test_postprocessor.py  test_sampled_set.py  test_sampled_surface.py  test_set_sampling_cavity.py  test_surfaceDataSet.py  test_surface_adapter.py  test_surface_builders.py  test_surfaces.py
tests/integration/cube/: AllrunParallel  log.blockMesh
tests/integration/cube/0.orig/: p
tests/integration/cube/system/: blockMeshDict  decomposeParDict
tests/postProcessing/: Allrun  AllrunParallel  asdtest_postProcess.py  conftest.py  intAlpha.csv  maxAlpha.csv  postProcess.py  test_post_processing.py  test_post_processing_parallel.py
tests/postProcessing/system/: controlDict  decomposeParDict
tests/setFields/: postProcess.py  test_postProcess.py
tests/setFields/0/: p
tests/unit/: test_aggregation.py  test_aggregators.py  test_binning.py  test_datasets.py  test_set_adapter.py  test_set_interpolation.py  test_sets.py  test_spatial_selectors.py  test_writer.py
