[project]
name = "pyOFTools"
version = "0.1.0"
authors = [
    {name = "Henning Scheufler", email = "henning.scheufler@dlr.de"},
]
description = "Python tools for OpenFOAM"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = ["OpenFOAM", "simulation", "CFD"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pybFoam>=0.1.4",
    "typer"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pandas>=2.0.0"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "myst-parser",
]
test = [
    "pytest"
]
all = [
    "pyOFTools[dev,docs,test]",
]

[project.scripts]
pyoftools = "pyOFTools.cli:main"

[project.urls]
Homepage = "https://github.com/DLR-RY/pyOFTools"
Repository = "https://github.com/DLR-RY/pyOFTools.git"
Issues = "https://github.com/DLR-RY/pyOFTools/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = [
    "scikit-build-core[pyproject]>=0.4.3",
    "pybind11>=2.6.0",
    "cmake>=3.18",
]
build-backend = "scikit_build_core.build"



[tool.scikit-build]
cmake.version = ">=3.18"
cmake.build-type = "Release"
build.verbose = true
build-dir = "_skbuild"
editable.mode = "redirect"
editable.verbose = true
editable.rebuild = false

[tool.scikit-build.cmake.define]
PYBIND11_FINDPYTHON = "ON"
CMAKE_CXX_STANDARD = "17"

[tool.pytest.ini_options]
addopts = "-ra -v -s"
testpaths = ["tests"]
